# tokengating-example-app

./: .gitignore  .graphqlrc.js  .tool-versions  CONTRIBUTING.md  README.md  package-lock.json  package.json  shopify.app.toml
.spin/: Procfile  bootstrap  env  update
app/: shopify.server.js
app/api/: create-discount.js  create-gate.js  delete-gate.js  gates.js  retrieve-gates.js
app/routes/: app._index.jsx  app.tokengates.$id.jsx  app.tokengates._index.jsx
examples/: README.md
examples/tokengating-cart-checkout-validation/: Cargo.toml  README.md  input.graphql  schema.graphql  shopify.function.extension.toml
examples/tokengating-cart-checkout-validation/src/: main.rs  tests.rs
extensions/tokengate/: README.md  shopify.theme.extension.toml
extensions/tokengate-src/: README.md  package-lock.json  package.json  vite.config.js
extensions/tokengate-src/src/: App.jsx  index.jsx  useEvaluateGate.js
extensions/tokengate/blocks/: app-block.liquid
extensions/tokengating-function/: Cargo.toml  README.md  input.graphql  schema.graphql  shopify.function.extension.toml
extensions/tokengating-function/src/: main.rs  tests.rs
web/: README.md  index.js  package-lock.json  package.json  public-api.js  session.js  shopify.js
web/api/: constants.js  create-discount.js  create-gate.js  delete-gate.js  gates.js  retrieve-gates.js
web/frontend/: App.jsx  package.json  vite.config.js
web/frontend/assets/: index.js
web/frontend/components/: SegmentsModal.jsx  TokengatesList.jsx  TokengatesResourcePicker.jsx
web/frontend/pages/: CreateTokengate.jsx  index.jsx
