[package]
name = "tokengating-function"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_with = "1.13.0"
serde_json = "1.0"
sha2 = "0.9.8"
hmac = "0.11.0"
hex = "0.4.3"
shopify_function = "0.2.4"
graphql_client = "0.12.0"

[profile.release]
lto = true
opt-level = 'z'
strip = true
